--- a/faq-accordion-card/style.css
+++ b/faq-accordion-card/style.css
@@ -12,3 +12,92 @@
   --soft-violet: hsl(273, 75%, 66%);
   --soft-blue: hsl(240, 73%, 65%);
 }
+
+body {
+  background-image: linear-gradient(
+    90deg,
+    var(--soft-blue),
+    var(--soft-violet)
+  );
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main {
+  background-color: white;
+  margin: auto;
+}
+img {
+  max-width: 100%;
+}
+/* mobile first designe  */
+@media (max-width: 500px) {
+  .hide-mobile {
+    display: none;
+  }
+  main {
+    width: 80%;
+    padding: 20px;
+    border-radius: 20px;
+  }
+  details {
+    color:var(--very-dark-blue);
+    margin-block: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid gainsboro;
+  }
+ h1{
+    text-align: center;
+    margin-block: 15px 20px;
+ }
+  p {
+    margin-block: 10px 20px;
+    color: rgb(62, 62, 62);
+  }
+}
+
+
+@media(min-width:500px){
+    .hide-desktop{
+        display: none;
+    }
+    main{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        overflow: hidden;
+        padding: 80px 30px;
+        border-radius: 20px;
+        max-width: 1000px;
+    }
+    h1{
+        font-size: 35px;
+        margin-bottom: 20px;
+    }
+    .faq{
+        width:60%;
+    }
+    details{
+        /* margin-block:10px; */
+        border-bottom: 1px solid gainsboro;
+        padding-block: 15px;
+    }
+    summary{
+        cursor: pointer;
+    }
+    p{
+        width:300px;
+        padding-block: 10px;
+    }
+    .image-section{
+        width: 50%;
+    }
+    img{
+        width: 110%;
+        position: relative;
+        left: -20%;
+    }
+
+}
