--- a/faq-accordion-card/style.css
+++ b/faq-accordion-card/style.css
@@ -22,7 +22,8 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 main {
@@ -43,61 +44,60 @@ img {
     border-radius: 20px;
   }
   details {
-    color:var(--very-dark-blue);
+    color: var(--very-dark-blue);
     margin-block: 15px;
     padding-bottom: 15px;
     border-bottom: 1px solid gainsboro;
   }
- h1{
+  h1 {
     text-align: center;
     margin-block: 15px 20px;
- }
+  }
   p {
     margin-block: 10px 20px;
     color: rgb(62, 62, 62);
   }
 }
 
-
-@media(min-width:500px){
-    .hide-desktop{
-        display: none;
-    }
-    main{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        overflow: hidden;
-        padding: 80px 30px;
-        border-radius: 20px;
-        max-width: 1000px;
-    }
-    h1{
-        font-size: 35px;
-        margin-bottom: 20px;
-    }
-    .faq{
-        width:60%;
-    }
-    details{
-        /* margin-block:10px; */
-        border-bottom: 1px solid gainsboro;
-        padding-block: 15px;
-    }
-    summary{
-        cursor: pointer;
-    }
-    p{
-        width:300px;
-        padding-block: 10px;
-    }
-    .image-section{
-        width: 50%;
-    }
-    img{
-        width: 110%;
-        position: relative;
-        left: -20%;
-    }
-
+@media (min-width: 500px) {
+  .hide-desktop {
+    display: none;
+  }
+  main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+    padding: 80px 30px;
+    border-radius: 20px;
+    max-width: 1000px;
+  }
+  h1 {
+    font-size: 35px;
+    margin-bottom: 20px;
+  }
+  .faq {
+    width: 60%;
+  }
+  details {
+    /* margin-block:10px; */
+    border-bottom: 1px solid gainsboro;
+    padding-block: 15px;
+  }
+  summary {
+    cursor: pointer;
+  }
+  p {
+    max-width: 450px;
+    padding-block: 10px;
+    color: rgb(62, 62, 62);
+  }
+  .image-section {
+    width: 50%;
+  }
+  img {
+    width: 120%;
+    position: relative;
+    left: -20%;
+  }
 }
