--- a/faq-accordion-card/style.css
+++ b/faq-accordion-card/style.css
@@ -14,6 +14,7 @@
 }
 
 body {
+  padding-inline: 10px;
   background-image: linear-gradient(
     90deg,
     var(--soft-blue),
@@ -39,7 +40,7 @@ img {
     display: none;
   }
   main {
-    width: 80%;
+    width: 85%;
     padding: 20px;
     border-radius: 20px;
   }
