--- a/expense-chart-component/src/Styles/styles.css
+++ b/expense-chart-component/src/Styles/styles.css
@@ -6,14 +6,20 @@
 }
 
 body {
-  padding: 20px;
   background-color: hsl(27, 66%, 92%);
 }
 
 main {
   width: 80%;
   max-width: 600px;
-  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#card {
+  width: 100%;
 }
 
 header {
