--- a/expense-chart-component/src/Styles/styles.scss
+++ b/expense-chart-component/src/Styles/styles.scss
@@ -6,14 +6,22 @@
   font-family: variables.$ff;
 }
 body {
-  padding: 20px;
+  // padding: 20px;
   background-color: variables.$cream;
+  // display: flex;
 }
 main {
   width: 80%;
   max-width: 600px;
-  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% , -50%);
+  
 }
 
+#card {
+  width: 100%;
+}
 @import "../components/header";
 @import "../components/card";
