desktop navbar dropdowns

--- a/intro-section-page/src/components/Hero/_hero.scss
+++ b/intro-section-page/src/components/Hero/_hero.scss
@@ -1,6 +1,6 @@
 @use "../../styles/variables";
 section#hero {
   // here will be all the hero styles
-  background-color: variables.$black;
+  // background-color: variables.$black;
   color: variables.$white;
 }
