--- a/intro-section-page/src/styles/styles.css
+++ b/intro-section-page/src/styles/styles.css
@@ -4,13 +4,122 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  background-color: hsl(0, 0%, 95%);
 }
 
 nav {
-  background-color: hsl(0, 0%, 98%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul {
+  list-style: none;
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+@media (max-width: 640px) {
+  .desktop-navigation {
+    display: none;
+  }
+  nav {
+    padding: 15px;
+  }
+  nav h1 {
+    font-size: 1.8rem;
+    font-weight: 600;
+  }
+  nav .mobile-menu-toggle {
+    width: -moz-fit-content;
+    width: fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    cursor: pointer;
+    padding-top: 7px;
+  }
+  nav .mobile-menu-toggle img {
+    width: 25px;
+  }
+}
+@media (min-width: 640px) {
+  .mobile-menu-toggle {
+    display: none;
+  }
+  nav {
+    max-width: 1300px;
+    margin: auto;
+    padding: 20px 15px;
+  }
+  nav .logo-and-ul {
+    display: flex;
+    align-items: center;
+  }
+  nav .logo-and-ul h1 {
+    margin-right: 2em;
+    cursor: pointer;
+  }
+  nav .logo-and-ul ul.desktop-navigation {
+    padding-top: 5px;
+    display: flex;
+  }
+  nav .logo-and-ul ul.desktop-navigation li {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    cursor: pointer;
+    position: relative;
+  }
+  nav .logo-and-ul ul.desktop-navigation li img {
+    padding-top: 3px;
+    margin-left: 5px;
+  }
+  nav .logo-and-ul .dropdown {
+    background-color: white;
+    position: absolute;
+    top: 35px;
+    padding: 11px;
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
+  nav .logo-and-ul .dropdown li {
+    margin: 10px 0;
+  }
+  nav .logo-and-ul .dropdown li img {
+    margin-top: -5px;
+    margin-right: 5px;
+  }
+  nav .logo-and-ul .dropdown:nth-of-type(1) {
+    right: 0;
+  }
+  nav .logo-and-ul .dropdown:nth-of-type(2) {
+    width: 200px;
+    left: 0;
+  }
+  nav .buttons-container button {
+    padding: 8px 20px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+  nav .buttons-container button:nth-of-type(1) {
+    margin-top: 5px;
+    margin-right: 5px;
+  }
+  nav .buttons-container button:nth-of-type(2) {
+    border-radius: 10px;
+    border: 2px solid rgb(165, 165, 165);
+  }
+}
 section#hero {
-  background-color: hsl(0, 0%, 8%);
-  color: hsl(0, 0%, 98%);
+  color: hsl(0, 0%, 95%);
 }/*# sourceMappingURL=styles.css.map */
