--- a/intro-section-page/src/components/Hero/_hero.scss
+++ b/intro-section-page/src/components/Hero/_hero.scss
@@ -4,13 +4,83 @@ section#hero {
   img {
     max-width: 100%;
   }
+  button {
+    background-color: variables.$black;
+    color: variables.$white;
+    font-weight: bolder;
+  }
+  p {
+    color: variables.$dark-gray;
+  }
+  ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.slide-out {
+  transform: translateX(120%);
+}
+.slide-in {
+  transform: translateX(0);
 }
 
 // mobile design
+
+@media (max-width: 940px) {
+  section#hero {
+    picture {
+      margin: auto;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2.3rem;
+      margin-block: 1em 0.6em;
+    }
+    p {
+      text-align: center;
+      padding-inline: 13px;
+      font-weight: 600;
+    }
+    button {
+      display: block;
+      margin: 25px auto 35px;
+      padding: 13px 30px;
+      border-radius: 10px;
+      border: none;
+    }
+    ul {
+      max-width: 400px;
+      margin: auto;
+      img {
+        width: 60px;
+      }
+    }
+    aside {
+      transition: 0.3s;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: white;
+      width: 60%;
+      height: 100vh;
+      padding: 10px;
+      .close-aside {
+        padding: 10px;
+        width: fit-content;
+        margin-left: auto;
+      }
+    }
+  }
+}
 // desktop design
 @media (min-width: 940px) {
+  aside {
+    display: none;
+  }
   section#hero {
-    margin-top: 8em;
+    padding-top: 4em;
     max-width: 1150px;
     margin: auto;
     display: flex;
@@ -26,7 +96,7 @@ section#hero {
     }
 
     h1 {
-      font-size: 4.5rem;
+      font-size: 4.8rem;
       line-height: 3.8rem;
       margin-top: 1.5em;
       span {
@@ -36,29 +106,31 @@ section#hero {
     p {
       text-align: left;
       font-size: 17px;
-      margin-block: 2.5em 2em;
+      line-height: 24px;
+      margin-block: 2.8em 2.2em;
       max-width: 400px;
       font-weight: 600;
-      color: variables.$dark-gray;
     }
     button {
-      background-color: variables.$black;
       border: none;
       font-size: 18px;
-      font-weight: bold;
       padding: 10px 20px;
-      color: variables.$white;
       border-radius: 10px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: variables.$white;
+      color: variables.$black;
+      border: 1px solid variables.$black;
     }
 
     ul {
-      list-style: none;
-      display: flex;
-      justify-content: space-between;
       position: absolute;
-      bottom: 40px;
+      bottom: 10px;
+
       li {
         margin-inline: 15px;
+        cursor: pointer;
       }
     }
   }
