--- a/newsletter-sign-up-form/src/styles/styles.scss
+++ b/newsletter-sign-up-form/src/styles/styles.scss
@@ -6,6 +6,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   background-color: variables.$grayish-blue-clr;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  img {
+    max-width: 100%;
+  }
 }
+
+@import "../components/Form/form";
