--- a/advice-generator-app/src/styles.css
+++ b/advice-generator-app/src/styles.css
@@ -14,9 +14,8 @@
 body {
   background-color: var(--dark-blue);
   min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  place-content: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 picture img {
@@ -30,6 +29,7 @@ main {
   background-color: var(--dark-grayish-blue);
   color: var(--light-cyan);
   width: 90%;
+  /* margin: auto; */
   max-width: 800px;
   text-align: center;
 }
