--- a/advice-generator-app/src/styles.css
+++ b/advice-generator-app/src/styles.css
@@ -16,12 +16,12 @@ body {
   min-height: 100vh;
   display: grid;
   place-content: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 picture img {
   max-width: 100%;
   margin-block: 10px 20px;
-  
 }
 main {
   padding: 15px;
@@ -29,19 +29,19 @@ main {
   background-color: var(--dark-grayish-blue);
   color: var(--light-cyan);
   width: 90%;
-  /* margin: auto; */
+  margin: auto;
   max-width: 800px;
   text-align: center;
 }
-main p{
-    color: var(--neon-green);
-    letter-spacing: 2px;
-    font-weight: bold;
-    padding-block: 20px;
+main p {
+  color: var(--neon-green);
+  letter-spacing: 2px;
+  font-weight: bold;
+  padding-block: 20px;
 }
-main h1{
-    margin-bottom: 15px;
-    font-size: 20px;
+main h1 {
+  margin-bottom: 15px;
+  font-size: 20px;
 }
 main button {
   display: block;
