--- a/url-shortener/src/components/Header/_header.scss
+++ b/url-shortener/src/components/Header/_header.scss
@@ -6,7 +6,7 @@ header {
   align-items: center;
   max-width: 1200px;
   margin: auto;
-  padding: 10px;
+  padding:15px 10px;
 
   ul {
     list-style: none;
