--- a/url-shortener/src/styles/styles.scss
+++ b/url-shortener/src/styles/styles.scss
@@ -13,5 +13,7 @@ body {
 @import "../components/Header/header";
 // import hero styles
 @import "../components/Hero/hero";
-// import link input
+// import link input styles
 @import "../components/LinkInput/linkInput";
+// import footer styles
+@import "../components/Footer/footer";
