--- a/url-shortener/src/styles/styles.scss
+++ b/url-shortener/src/styles/styles.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: rgb(236, 236, 236);
+  background-color: rgba(216, 222, 223, 0.324);
 }
 // import header styles
 @import "../components/Header/header";
@@ -17,3 +17,5 @@ body {
 @import "../components/LinkInput/linkInput";
 // import footer styles
 @import "../components/Footer/footer";
+// import the statistics styles
+@import "../components/Statistics/statistics";
