url shortener: style changes

--- a/url-shortener/src/components/LinkInput/_linkInput.scss
+++ b/url-shortener/src/components/LinkInput/_linkInput.scss
@@ -80,7 +80,7 @@ section#link-container {
   section#link-container {
     margin-block: 30px 60px;
     section#link {
-      padding-block: 30px;
+      padding: 50px 60px;
     }
   }
 }
